--- a/backendCoinPortfolio/package.json
+++ b/backendCoinPortfolio/package.json
@@ -16,7 +16,8 @@
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^8.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
