--- a/backendCoinPortfolio/package.json
+++ b/backendCoinPortfolio/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "uuid": "^8.3.2",
+    "websocket": "^1.0.34",
     "ws": "^8.4.0"
   },
   "devDependencies": {
